<resources>
    <string name="app_name">On Demand Taxi Vehicle Rental</string>
    <string name="deja_inscrit_connectez_vous">ALREADY REGISTERED, CONNECT</string>
    <string name="pas_de_compte_creer_ici">NO ACCOUNT, CREATE HERE</string>
    <string name="se_connecter">LOG IN</string>
    <string name="t_l_phone">Phone</string>
    <string name="pr_nom">First name</string>
    <string name="confirmez_le_mot_de_passe">Confirm the password</string>
    <string name="mot_de_passe">Password</string>
    <string name="envoyer">SEND</string>
    <string name="drawer_open">Ouvrir le navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="item_home">Home</string>
    <string name="item_logout">Sign out</string>
    <string name="item_help">Help and assistance</string>
    <string name="item_mes_requete">My queries</string>
    <string name="item_requete">Requests received</string>
    <string name="item_mes_courses">My race</string>
    <string name="item_profile">My profile</string>
    <string name="item_reservation">Reservations</string>
    <string name="item_louer_vehicule">Rent a vehicle</string>
    <string name="item_vehicule_loue">Rented vehicle</string>
    <string name="please_wait">Waiting please</string>
    <string name="accepter">ACCEPT</string>
    <string name="modification_d_information">Change information</string>
    <string name="enregistrer">SAVE</string>
    <string name="annuler">CANCEL</string>
    <string name="cancel">Cancel</string>
    <string name="fermer">CLOSE</string>
    <string name="terminer">TERMINATE</string>
    <string name="commander">ORDER</string>
    <string name="reservation">BOOK</string>
    <string name="pas_de_v_hicule_pour_le_moment">No vehicle at the moment</string>
    <string name="assurez_vous_d_tre_connecter_internet_et_tapez_sur_les_nuages">Make sure you connect to the internet and tap the clouds</string>
    <string name="pas_de_course_pour_le_moment">No race at the moment</string>
    <string name="pas_de_commande_pour_le_moment">No order for the moment</string>
    <string name="pas_de_historique_pour_le_moment">No historic for the moment</string>
    <string name="pas_de_message_pour_le_moment">No message for the moment</string>
    <string name="pas_de_r_servation_pour_le_moment">No reservation for the moment</string>

    <string name="entrez_nvos_informations">Enter \nyour information</string>
    <string name="mot_de_passe_oubli">Forgot your password?</string>
    <string name="prenom">First name</string>
    <string name="votre_taxi_en_un_clic">Your taxi \nin a few clicks</string>
    <string name="mot_de_passe_actuel">Current Password</string>
    <string name="nouveau_mot_de_passe">New Password</string>
    <string name="confirmez_le_nouveau_mot_de_passe">Confirm the new password</string>
    <string name="nom">Last name</string>
    <string name="client">Customer: </string>
    <string name="information_sur_la_r_servation">Reservation Information</string>
    <string name="total_payer">Total to pay</string>
    <string name="nombre_de_jour">Number of days</string>
    <string name="date_d_but">Start date</string>
    <string name="date_fin">End date</string>
    <string name="contact">Contact</string>
    <string name="conducteur_name">Driver name</string>
    <string name="donner_nune_note">GIVE \nA NOTE</string>
    <string name="_33_avis">33 reviews</string>
    <string name="date">Date</string>
    <string name="valid_e">Validated</string>
    <string name="ex_cut_e">Executed</string>
    <string name="paiement_par_cash">Cash payment</string>
    <string name="m_thode_de_paiement">Method of payment</string>
    <string name="distance">Distance</string>
    <string name="dur_e">Duration</string>
    <string name="co_t">Cost</string>
    <string name="date_d_part">Departure date</string>
    <string name="heure_d_part">Departure time</string>
    <string name="woumtana">Woumtana</string>
    <string name="pingdiwind_youssouf">Pingdiwindé youssouf</string>
    <string name="_226_63_86_22_46">+1 235 454 12</string>
    <string name="issoufwoumtana_gmail_com">issoufwoumtana@gmail.com</string>
    <string name="_12345678">12345678</string>
    <string name="entrez_votre_numero_de_telephone">Enter your phone number</string>
    <string name="entrez_votre_bon_numero_de_telephone">Enter a good phone number</string>
    <string name="entrez_votre_mot_de_passe">Enter your password</string>
    <string name="le_mot_de_passe_necessite_8_caracteres">Password requires at least 8 characters</string>
    <string name="confirmez_votre_mot_de_passe">Confirm the password</string>
    <string name="mot_de_passe_non_identiques">Non-identical password</string>
    <string name="ecrivez_quelque_chose">Write something</string>
    <string name="votre_message_a_ete_envoye">Your message has been sent successfully</string>
    <string name="echec_denvoi">Failed to send</string>
    <string name="pas_de_connexion_internet">No internet connection</string>
    <string name="annule_avec_succes">Canceled successfully</string>
    <string name="echec_dannulation">Failed to cancel</string>
    <string name="voulez_vous_accepter_cette_course">Do you want to accept this race?</string>
    <string name="voulez_vous_annuler_votre_demande">Do you want to cancel your request?</string>
    <string name="la_requete_a_ete_valide_avec_succes">The request has been successfully validated</string>
    <string name="echec_de_validation">Validation failure</string>
    <string name="un_de_vos_collegue_a_deja_valide_cette_course">One of your colleagues has already validated this request</string>
    <string name="voulez_vous_annuler_votre_reservation">Do you want to cancel your reservation?</string>
    <string name="votre_reservation_a_ete_annule_avec_succes">Your reservation has been canceled successfully</string>
    <string name="erreur_de_suppression">Deletion error</string>
    <string name="disponible">Available</string>
    <string name="indisponible">Unavailable</string>
    <string name="veuillez_attendre_que_les_donnees_se_chargent">Please wait for the data to load</string>
    <string name="message_envoye_avec_succes">message sent successfully</string>
    <string name="ce_service_necessite_l_activation_du_service_gps">This service requires the activation of the GPS service. Do you want to activate GPS?</string>
    <string name="envoyer_avec_succes">Sent successfully</string>
    <string name="note_attribuer_avec_succes">Rating awarded successfully</string>
    <string name="echec_d_attribution">Failed to assign</string>
    <string name="echec_de_modification">Failed to edit</string>
    <string name="position_du_client">Customer\'s position</string>
    <string name="destination_du_client">Customer\'s destination</string>
    <string name="votre_requete_a_ete_envoye_avec_succes">Your request has been sent successfully</string>
    <string name="une_erreur_est_survenue_lors_de_lenvoi_de_votre_requete">An error occurred while sending your request</string>
    <string name="entrez_correctement_vos_informations">Enter the information correctly</string>
    <string name="point_de_depart">Starting point</string>
    <string name="vous_voulez_vous_rendre_ici">You want to go here</string>
    <string name="votre_point_de_depart">Your starting point</string>

    <string name="depart">Departure</string>
    <string name="destination">Destination</string>
    <string name="entrez_votre_nom">Enter your name</string>
    <string name="entrez_votre_prenom">Enter your first name</string>
    <string name="entrez_votre_email">Enter your e-mail</string>
    <string name="entrez_votre_nouveau_mot_de_passe">Enter your new password</string>
    <string name="modifie">Amended</string>
    <string name="Echec_de_modification">Failed to edit</string>
    <string name="mot_de_passe_actuel_incorrect">Current password is incorrect</string>
    <string name="entrez_votre_mot_de_passe_actuel">Enter your current password</string>
    <string name="ou_allez_vous">Where are you going ?</string>
    <string name="voir_le_trajet">See the path</string>
    <string name="mon_statut">My status</string>
    <string name="mon_recu">RECEIPT</string>
    <string name="historic">Historic</string>
    <string name="your_request_is_being_processed">Your request is being processed</string>
    <string name="you_have_finished_the_race">You have finished the race successfully</string>
</resources>
