<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Connexion"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.projets.heven.taxijaune.circleimage.CircleImageView
            android:visibility="gone"
            android:layout_marginLeft="0dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorLogoBlack"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="0dp"
            android:src="@drawable/logo_taxijaune"
            app:civ_circle_background_color="@color/colorWhite"/>

        <TextView
            android:layout_marginTop="5dp"
            android:textSize="30sp"
            android:textColor="@color/colorLogoBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrez_nvos_informations" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:maxLength="15"
                android:drawableTint="@color/colorLogoBlack"
                android:drawableRight="@drawable/ic_profile_con"
                android:textSize="16sp"
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/t_l_phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:maxLength="12"
                android:drawableTint="@color/colorLogoBlack"
                android:drawableRight="@drawable/ic_password_outline"
                android:id="@+id/mdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="left">

            <TextView
                android:background="?android:selectableItemBackground"
                android:paddingTop="5dp"
                android:paddingBottom="0dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="13sp"
                android:textAlignment="center"
                android:id="@+id/mdp_oublier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mot_de_passe_oubli" />

            <TextView
                android:layout_marginTop="10dp"
                android:paddingLeft="45dp"
                android:paddingRight="45dp"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                android:cursorVisible="false"
                android:gravity="center"
                android:id="@+id/se_connecter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_button"
                android:text="@string/se_connecter"
                android:textColor="@color/colorLogoBlack"
                android:layout_above="@+id/creer_compte"/>

            <TextView
                android:gravity="center"
                android:layout_marginBottom="0dp"
                android:paddingLeft="45dp"
                android:paddingRight="45dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/custom_button_second"
                android:layout_alignParentRight="true"
                android:id="@+id/creer_compte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pas_de_compte_creer_ici" />
        </LinearLayout>

        <RelativeLayout
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_weight="1"
                android:layout_alignParentLeft="true"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/relativeLayout"
                android:layout_toStartOf="@+id/relativeLayout">

                <View
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/line_divider"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#aaaaaa"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout">

                <TextView
                    android:id="@+id/ou_connectez_vous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ou connectez-vous avec" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/relativeLayout"
                android:layout_toEndOf="@+id/relativeLayout">

                <View
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:background="#aaaaaa"/>
            </RelativeLayout>

        </RelativeLayout>

        <ProgressBar
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:id="@+id/progressBar_sc"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp" />

    </LinearLayout>

</LinearLayout>
