<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:padding="5dp"
        android:id="@+id/cancel"
        app:srcCompat="@drawable/quantum_ic_clear_grey600_24"
        android:layout_gravity="right"
        android:layout_width="30dp"
        android:layout_height="30dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/recycler_view_conducteur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"/>

    <LinearLayout
        android:background="@drawable/custom_cash"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_weight="3"
            android:tint="@color/colorYelloDark"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_payment_cash"
            android:layout_gravity="right"
            android:layout_width="match_parent"
            android:layout_height="55dp"/>

        <LinearLayout
            android:layout_weight="1"
            android:gravity="center|left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/colorLogoBlack"
                android:gravity="bottom"
                android:text="@string/paiement_par_cash"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:gravity="bottom"
                android:text="@string/m_thode_de_paiement"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center|left">

            <ImageView
                android:tint="@color/colorYelloDark"
                app:srcCompat="@drawable/ic_distance"
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView
                android:layout_marginTop="7dp"
                android:gravity="bottom"
                android:text="@string/distance"
                android:layout_weight="5"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center|left">

            <TextView
                android:gravity="right"
                android:layout_marginTop="7dp"
                android:text=""
                android:layout_weight="5"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:textSize="18sp"
                android:id="@+id/distance_requete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center|left">

            <ImageView
                android:tint="@color/colorYelloDark"
                app:srcCompat="@drawable/ic_time_outline"
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView
                android:layout_marginTop="7dp"
                android:gravity="bottom"
                android:text="@string/dur_e"
                android:layout_weight="5"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center|left">

            <TextView
                android:gravity="right"
                android:layout_marginTop="7dp"
                android:text=""
                android:layout_weight="5"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:textSize="18sp"
                android:id="@+id/duree_requete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center|left">

            <ImageView
                android:tint="@color/colorYelloDark"
                app:srcCompat="@drawable/ic_money"
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView
                android:layout_marginTop="7dp"
                android:gravity="bottom"
                android:text="@string/co_t"
                android:layout_weight="5"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center|left">

            <TextView
                android:gravity="right"
                android:layout_marginTop="7dp"
                android:text=""
                android:layout_weight="5"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:textSize="18sp"
                android:id="@+id/cout_requete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_centerHorizontal="true"
            android:cursorVisible="false"
            android:gravity="center"
            android:id="@+id/commander"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_button"
            android:text="@string/commander"
            android:textColor="@color/colorLogoBlack"/>

        <TextView
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_button_second"
            android:layout_alignParentRight="true"
            android:id="@+id/reserver"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/reservation" />
    </LinearLayout>
</LinearLayout>